Black screen improved and logo was added

--- a/src/index.html
+++ b/src/index.html
@@ -9,22 +9,28 @@
   </head>
   <body>
     <div id="app">
-      <div class="top">
-        <div id="logo">
-          <img src="assets/logo.svg" alt="" />
-        </div>
-        <div id="loader">
-          <div class="dots">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
+      <section id="black">
+        <div class="top">
+          <div id="logo">
+            <img src="assets/logo.svg" alt="" />
+          </div>
+          <div id="loader">
+            <div class="dots">
+              <div class="dot"></div>
+              <div class="dot"></div>
+              <div class="dot"></div>
+            </div>
           </div>
         </div>
-      </div>
-
-      <div class="copyright" style="color: white">
-        Copyright &copy; Microsoft Corporation
-      </div>
+        <div class="copyright" style="color: white">
+          <div>Copyright &copy; Microsoft Corporation</div>
+          <div>
+            <img src="assets/old_text.svg" alt="" />
+          </div>
+        </div>
+      </section>
     </div>
+
+    <script src="app.js"></script>
   </body>
 </html>
