Blue screen was added successfully

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,16 @@
           </div>
         </div>
       </section>
+      <section id="blue">
+        <header></header>
+        <main>
+          <div class="left"></div>
+          <div class="right">
+            <span>welcome</span>
+          </div>
+        </main>
+        <footer></footer>
+      </section>
     </div>
 
     <script src="app.js"></script>
