Changes the scheme of the project to vite.js

--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
       </section>
     </div>
 
-    <script src="app.js"></script>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
