Stablizes project's file structure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Windows XP Simulation with HTML & CSS</title>
-    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div id="app">
@@ -29,6 +28,7 @@
           </div>
         </div>
       </section>
+
       <section id="blue">
         <header></header>
         <main>
@@ -39,6 +39,8 @@
         </main>
         <footer></footer>
       </section>
+
+      <section id="desktop"></section>
     </div>
 
     <script type="module" src="/main.js"></script>
