Addes desktop section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
         <footer></footer>
       </section>
 
-      <section id="desktop"></section>
+      <section id="desktop">
+        <div class="menubar">
+          <button>Start</button>
+        </div>
+      </section>
     </div>
 
     <script type="module" src="/main.js"></script>
