Adds icons to desktop

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
       </section>
 
       <section id="desktop">
+        <div class="icon">
+          <div class="icon__image"></div>
+          <div class="icon__label">My Computer</div>
+        </div>
         <div class="menubar">
           <button>Start</button>
         </div>
