Corrects sprite positioning

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
           <div class="icon__image"></div>
           <div class="icon__label">My Computer</div>
         </div>
+        <div class="icon">
+          <div class="icon__image" style="--x: 1; --y: 0"></div>
+          <div class="icon__label">Recycle Bin</div>
+        </div>
         <div class="menubar">
           <button>Start</button>
         </div>
